# bookshelf

./: .gitignore  README.md
debates/: the_problem_of_consciousness.md
skills/aristotle/eudaimonia-assessment/: SKILL.md
skills/aristotle/phronesis-deliberation/: SKILL.md
skills/aristotle/virtue-through-habit/: SKILL.md
skills/edwin_arnold/nishkama-karma/: SKILL.md
skills/edwin_arnold/the-unshaken-self/: SKILL.md
skills/edwin_arnold/three-gunas/: SKILL.md
skills/homer/: pyproject.toml
skills/homer/disguise-and-proof/: SKILL.md  reference.md
skills/homer/disguise-and-proof/scripts/: phase_reveal.py
skills/homer/wayfinding-nostos/: SKILL.md  reference.md
skills/homer/wayfinding-nostos/scripts/: nostos_sheet.py
skills/homer/xenia-reciprocity/: SKILL.md  reference.md
skills/homer/xenia-reciprocity/scripts/: xenia_audit.py
skills/laozi/return-to-root/: SKILL.md
skills/laozi/three-treasures/: SKILL.md
skills/laozi/wu-wei/: SKILL.md
skills/lovecraft/: pyproject.toml
skills/lovecraft/dissociated-knowledge-synthesis/: SKILL.md
skills/lovecraft/dissociated-knowledge-synthesis/examples/: sample-claims.json
skills/lovecraft/distributed-corroboration-window/: SKILL.md
skills/lovecraft/distributed-corroboration-window/examples/: sample-events.csv
skills/lovecraft/nested-evidence-report/: SKILL.md
skills/lovecraft/nested-evidence-report/examples/: sample-outline.yaml
skills/lovecraft/src/lovecraft_tools/: __init__.py  cli.py  evidence.py  outline.py  windows.py
skills/untitled/: README.md  pyproject.toml
(+33 files in other folders)
